# PraisonAI-Frameworks

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/actions/claude-code-action/: action.yml
.github/scripts/: merge-gate.js  pipeline-status.js
.github/workflows/: auto-pr-comment.yml  ci.yml  claude-merge-gate.yml  claude.yml  merge-conflict-claude.yml
docs/: adding-a-framework.md
examples/: agents_agno_handoff.yaml  agents_agno_multi.yaml  agents_autogen.yaml  agents_crewai.yaml  agents_google_adk_handoff.yaml  agents_google_adk_multi.yaml  agents_langgraph.yaml  agents_openai_agents.yaml  agents_openai_agents_handoff.yaml  agents_openai_agents_multi.yaml  agents_pydantic_ai.yaml  agents_pydantic_ai_handoff.yaml  agents_pydantic_ai_sequential.yaml  run_crewai.py
examples/third_party_adapter/: README.md  my_framework_adapter.py
src/praisonai_frameworks/: __init__.py  _availability.py  _observability.py  _telemetry.py  base.py
src/praisonai_frameworks/agno/: README.md  __init__.py  adapter.py
src/praisonai_frameworks/autogen/: __init__.py  adapter_ag2.py  adapter_v2.py  adapter_v4.py  family.py
src/praisonai_frameworks/crewai/: __init__.py  adapter.py
src/praisonai_frameworks/google_adk/: README.md  __init__.py  adapter.py
src/praisonai_frameworks/langgraph/: README.md  __init__.py  adapter.py
src/praisonai_frameworks/openai_agents/: README.md  __init__.py  adapter.py
src/praisonai_frameworks/pydantic_ai/: README.md  __init__.py  adapter.py
tests/: conftest.py
tests/integration/agno_adapter/: test_agno_basic.py  test_agno_live.py
tests/integration/autogen/: test_autogen_basic.py  test_autogen_v4_basic.py
tests/integration/crewai/: test_crewai_basic.py
tests/integration/google_adk_adapter/: test_google_adk_basic.py  test_google_adk_live.py
tests/integration/langgraph_adapter/: test_langgraph_basic.py  test_langgraph_live.py
tests/integration/langgraph_fw/: test_langgraph_basic.py
tests/integration/openai_agents_adapter/: test_openai_agents_basic.py  test_openai_agents_live.py
tests/integration/pydantic_ai_adapter/: test_pydantic_ai_basic.py  test_pydantic_ai_live.py
tests/unit/: test_agno_adapter_handoff.py  test_agno_adapter_protocol.py  test_agno_adapter_run.py  test_autogen_family_resolve.py  test_autogen_v4_adapter.py  test_availability.py  test_crewai_adapter_protocol.py  test_crewai_utf8_console.py  test_entry_points_registered.py  test_google_adk_adapter_handoff.py  test_google_adk_adapter_protocol.py  test_google_adk_adapter_run.py  test_langgraph_adapter_protocol.py  test_langgraph_adapter_run.py  test_openai_agents_adapter_handoff.py  test_openai_agents_adapter_protocol.py  test_openai_agents_adapter_run.py  test_pydantic_ai_adapter_handoff.py  test_pydantic_ai_adapter_protocol.py  test_pydantic_ai_adapter_run.py
