[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "praisonai-frameworks"
version = "0.1.2"
description = "Optional agent framework adapters for PraisonAI (CrewAI, AutoGen, extensions)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
authors = [{ name = "Mervin Praison" }]
keywords = ["ai", "agents", "praisonai", "crewai", "autogen", "framework"]
dependencies = [
    "praisonaiagents>=1.6.82",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.157.0",
    "litellm>=1.81.0",
    "praisonai-tools>=0.1.0",
]
autogen = [
    "pyautogen==0.2.29",
    "praisonai-tools>=0.1.0",
    "crewai",
]
ag2 = ["ag2>=0.11.0", "praisonai-tools>=0.1.0"]
autogen-v4 = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "autogen-core>=0.4.0",
    "praisonai-tools>=0.1.0",
    "crewai",
]
langgraph = [
    "langgraph>=0.2.0,<2",
    "langgraph-prebuilt>=0.2.0,<2",
    "langchain>=0.3.0,<2",
    "langchain-core>=0.3.0,<2",
    "langchain-openai>=0.2.0",
    "praisonai-tools>=0.1.0",
]
all = ["praisonai-frameworks[crewai,autogen,langgraph]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."praisonai.framework_adapters"]
crewai = "praisonai_frameworks.crewai.adapter:CrewAIAdapter"
autogen = "praisonai_frameworks.autogen.family:AutoGenFamilyAdapter"
autogen_v2 = "praisonai_frameworks.autogen.adapter_v2:AutoGenAdapter"
autogen_v4 = "praisonai_frameworks.autogen.adapter_v4:AutoGenV4Adapter"
ag2 = "praisonai_frameworks.autogen.adapter_ag2:AG2Adapter"
langgraph = "praisonai_frameworks.langgraph.adapter:LangGraphAdapter"

[project.urls]
Homepage = "https://praison.ai/docs"
Repository = "https://github.com/MervinPraison/PraisonAI-Frameworks"
Documentation = "https://praison.ai/docs/frameworks"
Issues = "https://github.com/MervinPraison/PraisonAI-Frameworks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/praisonai_frameworks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
