[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "praisonai-frameworks"
version = "0.1.9"
description = "Optional agent framework adapters for PraisonAI (CrewAI, AutoGen, extensions)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
authors = [{ name = "Mervin Praison" }]
keywords = ["ai", "agents", "praisonai", "crewai", "autogen", "framework", "openai-agents", "langgraph", "agno", "google-adk", "pydantic-ai"]
dependencies = [
    "praisonaiagents>=1.6.82",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.157.0",
    "litellm>=1.81.0",
    "praisonai-tools>=0.1.0",
]
autogen = [
    "pyautogen==0.2.29",
    "praisonai-tools>=0.1.0",
    "crewai",
]
ag2 = ["ag2>=0.11.0", "praisonai-tools>=0.1.0"]
autogen-v4 = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "autogen-core>=0.4.0",
    "praisonai-tools>=0.1.0",
    "crewai",
]
langgraph = [
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "praisonai-tools>=0.1.0",
]
openai-agents = [
    "openai-agents>=0.17.7,<0.18",
    "praisonai-tools>=0.1.0",
]
agno = [
    "agno[openai]>=2.6.0,<2.7",
    "praisonai-tools>=0.1.0",
]
google-adk = [
    "google-adk[extensions]>=2.3.0,<2.4",
    "praisonai-tools>=0.1.0",
]
pydantic-ai = [
    "pydantic-ai[openai,google]>=0.8.0,<0.9",
    "praisonai-tools>=0.1.0",
]
all = ["praisonai-frameworks[crewai,autogen,langgraph,openai-agents,agno]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."praisonai.framework_adapters"]
crewai = "praisonai_frameworks.crewai.adapter:CrewAIAdapter"
autogen = "praisonai_frameworks.autogen.family:AutoGenFamilyAdapter"
autogen_v2 = "praisonai_frameworks.autogen.adapter_v2:AutoGenAdapter"
autogen_v4 = "praisonai_frameworks.autogen.adapter_v4:AutoGenV4Adapter"
ag2 = "praisonai_frameworks.autogen.adapter_ag2:AG2Adapter"
langgraph = "praisonai_frameworks.langgraph.adapter:LangGraphAdapter"
openai_agents = "praisonai_frameworks.openai_agents.adapter:OpenAIAgentsAdapter"
agno = "praisonai_frameworks.agno.adapter:AgnoAdapter"
google_adk = "praisonai_frameworks.google_adk.adapter:GoogleAdkAdapter"
pydantic_ai = "praisonai_frameworks.pydantic_ai.adapter:PydanticAiAdapter"

[project.urls]
Homepage = "https://praison.ai/docs"
Repository = "https://github.com/MervinPraison/PraisonAI-Frameworks"
Documentation = "https://praison.ai/docs/frameworks"
Issues = "https://github.com/MervinPraison/PraisonAI-Frameworks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/praisonai_frameworks"]

[tool.uv]
conflicts = [
    [
        { extra = "langgraph" },
        { extra = "google-adk" },
    ],
    [
        { extra = "openai-agents" },
        { extra = "google-adk" },
    ],
    [
        { extra = "all" },
        { extra = "google-adk" },
    ],
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring optional deps",
    "live: live LLM tests requiring PRAISONAI_LIVE_TESTS and GOOGLE_API_KEY, GEMINI_API_KEY, or OPENAI_API_KEY",
]
